# github

skylla/: .gitignore  .zuul.yaml  Dockerfile  Dockerfile.release  README.md  pyproject.toml  setup.cfg  skylla.conf  zuul.yaml
skylla/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
skylla/scripts/: format  lint  test  test-cov-html
skylla/skylla/: main.py  settings.py
skylla/skylla/clients/: gerrit.py  jira.py
skylla/skylla/lib/: j2tmpl.py
skylla/skylla/models/: builds.py  gerrit.py  git.py
skylla/skylla/routes/: api.py  builds.py  service.py
skylla/skylla/templates/: jira_build_comment.j2
skylla/tests/: conftest.py  skylla-test.conf
skylla/tests/jira/: test_build.py  test_components.py
skylla/tests/mocks/jira/: fake.py  idtree.py  refresh_data.py  test_data.json
