[tool.poetry]
name = "skylla"
version = "1.2.0"
description = "Release management integration service"
authors = ["Michał Suszko <michal.suszko@pekao.com.pl>"]
repository = "https://gerrit.dev.pekao.com.pl/admin/repos/infra/skylla"
license = "proprietary"
packages = [
  { include = "skylla" }
]

[tool.poetry.dependencies]
python = "^3.8"

uvicorn = "^0.11"
fastapi = "^0.59"
starlette-prometheus = "^0.7"

aiohttp = "^3.6"
sentry-sdk = "^0.16"
httpx = "^0.13"
Jinja2 = "2.11"
piny = "^0.6"
jira = "^2.0.0"
pytz = "^2020"


[tool.poetry.dev-dependencies]
isort = "^4.3"
autoflake = "^1.3"
flake8 = "^3.8"
mypy = "^0.782"
black = "^19.10b0"
pytest = "^5.4"
pytest-asyncio = "^0.14.0"
pytest-cache = "^1.0"
pytest-cov = "^2.10.0"

[tool.poetry.scripts]
skylla = 'skylla.main:run'
ereb = 'skylla.ereb:run'
forkos = 'skylla.forkos:run'

[[tool.poetry.source]]
name = "pakiety"
url = "https://pakiety.dev.pekao.com.pl/api/pypi/pypi/simple"
default = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
